[package]
name = "smsbar-images"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robin Lee Powell <robinleepowell@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.27.1"
chrono = "0.4.23"
chrono-tz = "0.8.1"
base64 = "0.20.0"
slug = "0.1"
